--- a/app/styles/file.scss
+++ b/app/styles/file.scss
@@ -1,20 +1,19 @@
-.file-component {
+.file {
+  position: absolute;
+  top: 48px;
+  left: 0;
+  right: 0;
+  bottom: 0;
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-content: center;
-  align-items: center;
-  flex: 1;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-content: stretch;
+  align-items: stretch;
 
   padding: 10px;
 
   .meta {
-    flex-grow: 1;
-    flex-basis: 200px;
-    margin-right: 2em;
-    text-align: right;
-    width: 320px;
+    margin: 1em 0;
 
     .filename {
       a {
@@ -23,7 +22,8 @@
       }
 
       font-size: 1.8em;
-      line-height: 1.8;
+      line-height: 1em;
+      margin-bottom: 0.3em;
       font-weight: bold;
       word-wrap: break-word;
     }
@@ -41,32 +41,33 @@
       margin-top: 2em;
     }
   }
+
   .preview {
-    width: 320px;
-    height: 200px;
-    flex-basis: 200px;
-    flex-grow: 3;
-    flex-shrink: 0;
+    flex: 1 0 auto;
 
     display: flex;
+    justify-content: center;
     align-items: center;
+
+    background-color: #000;
 
     audio, .no-preview {
       width: 100%;
       font-size: 3em;
       color: #CCC;
       font-weight: bold;
+      text-align: center;
     }
 
     img {
       max-width: 100%;
-      max-height: 100%;
+      max-height: 1200px;
       margin: auto;
     }
 
     video {
-      width: 100%;
-      max-height: 100%;
+      max-width: 100%;
+      margin: auto;
     }
 
     .markdown {
@@ -82,15 +83,12 @@
   }
 }
 
-.file-display {
-  display: flex;
-  flex-direction: column;
-  flex: 1;
-}
-
-.file-actions {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 250px;
+@media (max-width: 550px) {
+  .file {
+    .meta {
+      .filename {
+        font-size: 1.3em;
+      }
+    }
+  }
 }
