--- a/app/templates/file.hbs
+++ b/app/templates/file.hbs
@@ -1,15 +1,30 @@
 {{#title-bar}}
-  Viewing
-  {{path-breadcrumb path=model.path}}
-  {{model.name}}
+  <div class="title">
+    Viewing
+    {{path-breadcrumb path=model.path}}
+    {{model.name}}
+  </div>
+
+  {{partial 'file-menu'}}
 {{/title-bar}}
 
-{{component model.typeComponent model=model class="file-display"}}
+<div class="file file-{{model.type}}">
+  <div class="meta">
+    <div class="filename">
+      {{paper-icon icon=model.typeIcon}}
+      <a href="{{model.rawPath}}">
+        {{model.name}}
+      </a>
+    </div>
 
-{{outlet}}
+    <div title="{{model.mtime}}" class="fsinfo">
+      <span class="updated">Updated {{moment-from-now model.mtime interval=5000}}</span>
+      &middot;
+      <span class="size">{{filesize model.size}}</span>
+      &middot;
+      <a href="{{model.rawPath}}" target="_blank">Download Original</a>
+    </div>
+  </div>
 
-<div class="file-actions">
-  {{#if canEdit}}
-    {{#paper-button action="delete" warn=true}}{{paper-icon icon="delete"}} Delete{{/paper-button}}
-  {{/if}}
+  {{component model.typeComponent model=model class="preview"}}
 </div>
