fixes for loading gallery from different directories, firefox issues

--- a/app/templates/plugins/gallery.hbs
+++ b/app/templates/plugins/gallery.hbs
@@ -1,1 +1,1 @@
-{{photo-swipe gallery=directoryGallery options=galleryOptions items=directoryGalleryItems}}
+{{photo-swipe enabled=galleryEnabled options=galleryOptions items=directoryGalleryItems}}
