--- a/app/styles/file.scss
+++ b/app/styles/file.scss
@@ -70,6 +70,13 @@
       margin: auto;
     }
 
+    iframe {
+      width: 100%;
+      align-self: stretch;
+      background-color: #FFF;
+      border: 0;
+    }
+
     .markdown {
       width: 100%;
       height: 100%;
