fix upload button

--- a/app/templates/directory-menu.hbs
+++ b/app/templates/directory-menu.hbs
@@ -7,7 +7,7 @@
 
   {{else}}
 
-    {{#paper-menu-item action="nothing" id="menu-upload-file"}}
+    {{#paper-menu-item action="chooseUpload" id="menu-upload-file"}}
       <p class="label">Upload</p>
       {{paper-icon icon="file-upload" class="md-menu-align-target"}}
     {{/paper-menu-item}}
