--- a/app/templates/directory.hbs
+++ b/app/templates/directory.hbs
@@ -53,11 +53,19 @@
 
         <td class="updated" title="{{file.mtime}}">
           <span class="short">
-            {{moment-from-now file.mtime locale="en-short" interval=5000 hideSuffix=true}}
+            {{#if model.lotsOfFiles}}
+              {{moment-from-now file.mtime locale="en-short" hideSuffix=true}}
+            {{else}}
+              {{moment-from-now file.mtime locale="en-short" interval=5000 hideSuffix=true}}
+            {{/if}}
           </span>
 
           <span class="long">
-            {{moment-from-now file.mtime locale="en" interval=5000}}
+            {{#if model.lotsOfFiles}}
+              {{moment-from-now file.mtime locale="en"}}
+            {{else}}
+              {{moment-from-now file.mtime locale="en" interval=5000}}
+            {{/if}}
           </span>
         </td>
 
