the 'template' property of a component is reserved, use something else for offer-iframe

--- a/app/templates/clients.hbs
+++ b/app/templates/clients.hbs
@@ -20,7 +20,7 @@
 
     Start the client. In the <strong>Server Name</strong> field, use this value:
     <div class="server-url">
-      {{offer-iframe template="$API_PROTO//sandstorm:$API_TOKEN@$API_HOST/"}}
+      {{offer-iframe content="$API_PROTO//sandstorm:$API_TOKEN@$API_HOST/"}}
     </div>
 
     On the <strong>Enter user credentials</strong> step, use:
@@ -33,7 +33,7 @@
 
       <div class="password-field">
         <label for="password">Password</label>
-        <div class="password">{{offer-iframe template="$API_TOKEN"}}</div>
+        <div class="password">{{offer-iframe content="$API_TOKEN"}}</div>
       </div>
     </div>
 
