add support for previewing pdfs

--- a/app/styles/file.scss
+++ b/app/styles/file.scss
@@ -70,7 +70,7 @@
       margin: auto;
     }
 
-    iframe {
+    iframe, object {
       width: 100%;
       align-self: stretch;
       background-color: #FFF;
