use offer-iframe unauthenticated and clipboard options for copy-and-paste and mobile support

--- a/app/templates/clients.hbs
+++ b/app/templates/clients.hbs
@@ -4,15 +4,15 @@
 
 {{#paper-content class="clients" flex-layout="column" flex=true}}
   <p class="content">
-    Synchronize your file storage with your local computer using a desktop client. Davros is compatible with the <a href="https://owncloud.org" target="_blank">ownCloud</a> Desktop Client. Davros is neither affiliated with nor endorsed by ownCloud.
+    Synchronize your file storage with your local device using a desktop or mobile client. Davros is compatible with the <a href="https://owncloud.org" target="_blank">ownCloud</a> Desktop, iOS, and Android clients. Davros is neither affiliated with nor endorsed by ownCloud.
 
     <h2>Step 1: Download a client from ownCloud</h2>
 
     <div class="client-download">
       <div>Choose your platform from the client download page:</div>
 
-      <a href="https://owncloud.org/install/#install-clients" target="_blank">
-        <img src="/images/clients/operating-systems.png">
+      <a class="md-button md-default-theme md-primary md-raised" href="https://owncloud.org/install/#install-clients" target="_blank">
+        Download client
       </a>
     </div>
 
@@ -20,20 +20,26 @@
 
     Start the client. In the <strong>Server Name</strong> field, use this value:
     <div class="server-url">
-      {{offer-iframe content="$API_PROTO//sandstorm:$API_TOKEN@$API_HOST/"}}
+      {{#if useAuthInServerUrl}}
+        {{offer-iframe content="$API_PROTO//sandstorm:$API_TOKEN@$API_HOST/" clipboardButton="right" unauthenticated=unauthenticated}}
+      {{else}}
+        {{offer-iframe content="$API_PROTO//$API_HOST/" clipboardButton="right" unauthenticated=unauthenticated}}
+      {{/if}}
     </div>
+
+      {{#paper-switch class="use-auth-in-url" noink=true checked=useAuthInServerUrl}} Put auth in URL (command line use) {{/paper-switch}}
 
     On the <strong>Enter user credentials</strong> step, use:
 
     <div class="authentication">
       <div class="username-field">
         <label for="username">Username</label>
-        <div class="username"><pre>sandstorm</pre></div>
+        <div class="username">{{offer-iframe content="sandstorm" clipboardButton="right" unauthenticated=unauthenticated}}</div>
       </div>
 
       <div class="password-field">
         <label for="password">Password</label>
-        <div class="password">{{offer-iframe content="$API_TOKEN"}}</div>
+        <div class="password">{{offer-iframe content="$API_TOKEN" clipboardButton="right" unauthenticated=unauthenticated}}</div>
       </div>
     </div>
 
