--- a/app/styles/clients.scss
+++ b/app/styles/clients.scss
@@ -9,14 +9,20 @@
     text-align: center;
 
     iframe {
-      margin: 20px auto;
+      margin: 20px auto 5px auto;
       width: 95%;
-      max-width: 800px;
+      max-width: 600px;
       border: 1px solid #000;
       padding: 3px;
-      height: 2.1em;
+      height: 1.2em;
       background-color: #FFF;
     }
+  }
+
+  .use-auth-in-url {
+    max-width: 600px;
+    margin: 0 auto 20px auto;
+    text-align: center;
   }
 
   .authentication {
@@ -42,12 +48,7 @@
       width: 400px;
     }
 
-    .username pre {
-      padding: 0 0 2px 0;
-      margin: 0;
-    }
-
-    .username, .password iframe {
+    .username iframe, .password iframe {
       border: 1px solid #000;
       padding: 3px;
       height: 1.2em;
