sign previews and show a few more types
* http get requests to webdav without a ?signature param will have Content-Disposition: attachment headers appended to them so that they cannot be shown inline
* add an option to toggle html sources
* display non-html documents as raw rather than as html
* large documents now prompt for preview so that they don't overload the browser

--- a/app/templates/components/files/type-document.hbs
+++ b/app/templates/components/files/type-document.hbs
@@ -1,5 +1,9 @@
-{{#if canSandbox}}
-  <iframe srcdoc="{{srcDoc}}" sandbox="allow-scripts"></iframe>
+{{#if showingPreview}}
+  {{#if canSandbox}}
+    <iframe srcdoc="<pre>{{escapeHtml srcDoc}}</pre>" sandbox=""></iframe>
+  {{else}}
+    <p>Your browser doesn't support sandboxing, so we can't show a preview inline.</p>
+  {{/if}}
 {{else}}
-  <p>Your browser doesn't support sandboxing, so we can't show a preview inline.</p>
+  {{#paper-button raised=true action="showPreview"}}Show Preview ({{filesize model.size}}){{/paper-button}}
 {{/if}}
