--- a/app/styles/file.scss
+++ b/app/styles/file.scss
@@ -48,8 +48,15 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
 
     background-color: #000;
+
+    .view-source {
+      position: absolute;
+      top: -50px;
+      right: 0;
+    }
 
     audio, .no-preview {
       width: 100%;
@@ -71,11 +78,12 @@
       margin: auto;
     }
 
-    iframe, object {
+    iframe, object, pre {
       width: 100%;
       align-self: stretch;
       background-color: #FFF;
       border: 0;
+      margin: 0;
     }
 
     .markdown {
