--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -5,7 +5,7 @@
     {{#paper-toolbar}}
       <div class="md-toolbar-tools">
         <div class="logo">
-          <strong>{{paper-icon icon="adjust"}} Davros File Storage</strong>
+          <strong>{{paper-icon "adjust"}} Davros File Storage</strong>
         </div>
       </div>
     {{/paper-toolbar}}
@@ -21,5 +21,3 @@
   {{/paper-content}}
 
 {{/paper-nav-container}}
-
-<div id="paper-wormhole"></div>
