add loading indicator

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -9,6 +9,7 @@ $font_root_url: '../fonts';
 @import 'file';
 @import 'clients';
 @import 'about';
+@import 'spinner';
 
 body, #content {
   background-color: #f3f3f3;
