upgrade directory archive feature for ember-paper 1.0

--- a/app/templates/directory-menu.hbs
+++ b/app/templates/directory-menu.hbs
@@ -24,9 +24,9 @@
       {{paper-icon "photo" class="md-menu-align-target"}}
     {{/paper-menu-item}}
 
-    {{#paper-menu-item action="downloadDirectory" id="menu-download-directory"}}
+    {{#paper-menu-item onClick="downloadDirectory" id="menu-download-directory"}}
       <p class="label">Download (zip)</p>
-      {{paper-icon icon="file-download" class="md-menu-align-target"}}
+      {{paper-icon "file-download" class="md-menu-align-target"}}
     {{/paper-menu-item}}
 
     {{#if canEdit}}
