fix IE rendering issues

--- a/app/templates/file-menu.hbs
+++ b/app/templates/file-menu.hbs
@@ -1,7 +1,7 @@
 <div class="more">
   {{#paper-menu position="target-right target" as |menu|}}
 
-    {{#paper-button onClick=(action "toggleMenu" target=menu) class="more-button" iconButton=true}}
+    {{#paper-button onClick=(action "toggleMenu" target=menu) class="more-button" icon-button=true}}
       {{paper-icon "more-vert" class="md-menu-origin"}}
     {{/paper-button}}
 
@@ -10,6 +10,10 @@
       {{#paper-menu-item class="danger" onClick=(route-action "delete")}}
         <p class="label">Delete File</p>
         {{paper-icon "delete" class="md-menu-align-target"}}
+      {{/paper-menu-item}}
+    {{else}}
+      {{#paper-menu-item}}
+        <p class="label">Read-only mode</p>
       {{/paper-menu-item}}
     {{/if}}
 
