image thumbnail wip

--- a/app/styles/directory.scss
+++ b/app/styles/directory.scss
@@ -37,7 +37,7 @@
         }
       }
 
-      .paper-icon {
+      .paper-icon, img {
         color: #999;
         padding-right: 0.3em;
         float: left;
