title menu alignment

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -40,6 +40,11 @@ md-toolbar {
       line-height: 2.3;
     }
 
+    .toggle-menu {
+      margin-top: 2px;
+      margin-right: 0 !important;
+    }
+
     .more {
       margin-right: -15px;
     }
