upgrade to ember 2.8-beta

--- a/app/styles/upload.scss
+++ b/app/styles/upload.scss
@@ -38,6 +38,8 @@
 }
 
 .dropzone-active {
+  * { pointer-events: none !important; }
+
   #dropzone-display {
     display: flex;
     position: fixed;
