--- a/app/templates/directory.hbs
+++ b/app/templates/directory.hbs
@@ -27,6 +27,28 @@
   {{partial 'directory-menu'}}
 {{/title-bar}}
 
+<div class="actions">
+  {{#paper-button onClick="chooseUpload"}}
+    {{paper-icon "file-upload"}}
+    Upload
+  {{/paper-button}}
+
+  {{#paper-button onClick="newDirectory"}}
+    {{paper-icon "add-circle-outline"}}
+    New Directory
+  {{/paper-button}}
+
+  {{#paper-button onClick="slideshow"}}
+    {{paper-icon "photo"}}
+    Slideshow
+  {{/paper-button}}
+
+  {{#paper-button onClick="downloadDirectory"}}
+    {{paper-icon "file-download"}}
+    Download (zip)
+  {{/paper-button}}
+</div>
+
 <table class="file-list {{if showExtraFields '' 'noExtraFields'}}">
   <thead>
     <tr>
