only show action buttons if they can be clicked

--- a/app/templates/directory.hbs
+++ b/app/templates/directory.hbs
@@ -28,15 +28,17 @@
 {{/title-bar}}
 
 <div class="actions">
-  {{#paper-button onClick="chooseUpload"}}
-    {{paper-icon "file-upload"}}
-    Upload
-  {{/paper-button}}
+  {{#if canEdit}}
+    {{#paper-button onClick="chooseUpload"}}
+      {{paper-icon "file-upload"}}
+      Upload
+    {{/paper-button}}
 
-  {{#paper-button onClick="newDirectory"}}
-    {{paper-icon "add-circle-outline"}}
-    New Directory
-  {{/paper-button}}
+    {{#paper-button onClick="newDirectory"}}
+      {{paper-icon "add-circle-outline"}}
+      New Directory
+    {{/paper-button}}
+  {{/if}}
 
   {{#paper-button onClick="slideshow"}}
     {{paper-icon "photo"}}
@@ -47,6 +49,13 @@
     {{paper-icon "file-download"}}
     Download (zip)
   {{/paper-button}}
+
+  {{#if canEdit}}
+    {{#paper-button onClick="delete"}}
+      {{paper-icon "delete"}}
+      Delete
+    {{/paper-button}}
+  {{/if}}
 </div>
 
 <table class="file-list {{if showExtraFields '' 'noExtraFields'}}">
